runtime/gen/basis-ffi.h

extern const C_Short_t Posix_IO_FLock_F_WRLCK;
C_Errno_t(C_Int_t) Posix_IO_FLock_fcntl(C_Fd_t,C_Int_t);
C_Off_t Posix_IO_FLock_getLen(void);
C_PId_t Posix_IO_FLock_getPId(void);
C_Off_t Posix_IO_FLock_getStart(void);
C_Short_t Posix_IO_FLock_getType(void);
C_Short_t Posix_IO_FLock_getWhence(void);
extern const C_Short_t Posix_IO_FLock_SEEK_CUR;
extern const C_Short_t Posix_IO_FLock_SEEK_END;
extern const C_Short_t Posix_IO_FLock_SEEK_SET;
void Posix_IO_FLock_setLen(C_Off_t);
void Posix_IO_FLock_setPId(C_PId_t);
void Posix_IO_FLock_setStart(C_Off_t);
void Posix_IO_FLock_setType(C_Short_t);
void Posix_IO_FLock_setWhence(C_Short_t);
C_Errno_t(C_Int_t) Posix_IO_fsync(C_Fd_t);
C_Errno_t(C_Off_t) Posix_IO_lseek(C_Fd_t,C_Off_t,C_Int_t);
extern const C_Int_t Posix_IO_O_ACCMODE;
C_Errno_t(C_Int_t) Posix_IO_pipe(Array(C_Fd_t));
C_Errno_t(C_SSize_t) Posix_IO_readChar8(C_Fd_t,Array(Char8_t),C_Int_t,C_Size_t);
C_Errno_t(C_SSize_t) Posix_IO_readWord8(C_Fd_t,Array(Word8_t),C_Int_t,C_Size_t);
extern const C_Int_t Posix_IO_SEEK_CUR;
extern const C_Int_t Posix_IO_SEEK_END;
extern const C_Int_t Posix_IO_SEEK_SET;
void Posix_IO_setbin(C_Fd_t);
void Posix_IO_settext(C_Fd_t);
C_Errno_t(C_SSize_t) Posix_IO_writeChar8Arr(C_Fd_t,Array(Char8_t),C_Int_t,C_Size_t);
C_Errno_t(C_SSize_t) Posix_IO_writeChar8Vec(C_Fd_t,Vector(Char8_t),C_Int_t,C_Size_t);
C_Errno_t(C_SSize_t) Posix_IO_writeWord8Arr(C_Fd_t,Array(Word8_t),C_Int_t,C_Size_t);
C_Errno_t(C_SSize_t) Posix_IO_writeWord8Vec(C_Fd_t,Vector(Word8_t),C_Int_t,C_Size_t);
C_String_t Posix_ProcEnv_ctermid(void);
extern C_StringArray_t Posix_ProcEnv_environ;
C_GId_t Posix_ProcEnv_getegid(void);
C_String_t Posix_ProcEnv_getenv(NullString8_t);
C_UId_t Posix_ProcEnv_geteuid(void);
C_GId_t Posix_ProcEnv_getgid(void);
C_Errno_t(C_Int_t) Posix_ProcEnv_getgroups(C_Int_t,Array(C_GId_t));
C_Int_t Posix_ProcEnv_getgroupsN(void);
C_Errno_t(C_String_t) Posix_ProcEnv_getlogin(void);
C_PId_t Posix_ProcEnv_getpgrp(void);
C_PId_t Posix_ProcEnv_getpid(void);
C_PId_t Posix_ProcEnv_getppid(void);
C_UId_t Posix_ProcEnv_getuid(void);
C_Int_t Posix_ProcEnv_isatty(C_Fd_t);
extern const C_Int_t Posix_ProcEnv_SC_2_C_BIND;
extern const C_Int_t Posix_ProcEnv_SC_2_C_DEV;
extern const C_Int_t Posix_ProcEnv_SC_2_CHAR_TERM;
extern const C_Int_t Posix_ProcEnv_SC_2_FORT_DEV;
extern const C_Int_t Posix_ProcEnv_SC_2_FORT_RUN;
extern const C_Int_t Posix_ProcEnv_SC_2_LOCALEDEF;
extern const C_Int_t Posix_ProcEnv_SC_2_PBS;
extern const C_Int_t Posix_ProcEnv_SC_2_PBS_ACCOUNTING;
extern const C_Int_t Posix_ProcEnv_SC_2_PBS_CHECKPOINT;
extern const C_Int_t Posix_ProcEnv_SC_2_PBS_LOCATE;
extern const C_Int_t Posix_ProcEnv_SC_2_PBS_MESSAGE;
extern const C_Int_t Posix_ProcEnv_SC_2_PBS_TRACK;
extern const C_Int_t Posix_ProcEnv_SC_2_SW_DEV;
extern const C_Int_t Posix_ProcEnv_SC_2_UPE;
extern const C_Int_t Posix_ProcEnv_SC_2_VERSION;
extern const C_Int_t Posix_ProcEnv_SC_ADVISORY_INFO;
extern const C_Int_t Posix_ProcEnv_SC_AIO_LISTIO_MAX;
extern const C_Int_t Posix_ProcEnv_SC_AIO_MAX;
extern const C_Int_t Posix_ProcEnv_SC_AIO_PRIO_DELTA_MAX;
extern const C_Int_t Posix_ProcEnv_SC_ARG_MAX;
extern const C_Int_t Posix_ProcEnv_SC_ASYNCHRONOUS_IO;
extern const C_Int_t Posix_ProcEnv_SC_ATEXIT_MAX;
extern const C_Int_t Posix_ProcEnv_SC_BARRIERS;
extern const C_Int_t Posix_ProcEnv_SC_BC_BASE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_BC_DIM_MAX;
extern const C_Int_t Posix_ProcEnv_SC_BC_SCALE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_BC_STRING_MAX;
extern const C_Int_t Posix_ProcEnv_SC_CHILD_MAX;
extern const C_Int_t Posix_ProcEnv_SC_CLK_TCK;
extern const C_Int_t Posix_ProcEnv_SC_CLOCK_SELECTION;
extern const C_Int_t Posix_ProcEnv_SC_COLL_WEIGHTS_MAX;
extern const C_Int_t Posix_ProcEnv_SC_CPUTIME;
extern const C_Int_t Posix_ProcEnv_SC_DELAYTIMER_MAX;
extern const C_Int_t Posix_ProcEnv_SC_EXPR_NEST_MAX;
extern const C_Int_t Posix_ProcEnv_SC_FSYNC;
extern const C_Int_t Posix_ProcEnv_SC_GETGR_R_SIZE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_GETPW_R_SIZE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_HOST_NAME_MAX;
extern const C_Int_t Posix_ProcEnv_SC_IOV_MAX;
extern const C_Int_t Posix_ProcEnv_SC_IPV6;
extern const C_Int_t Posix_ProcEnv_SC_JOB_CONTROL;
extern const C_Int_t Posix_ProcEnv_SC_LINE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_LOGIN_NAME_MAX;
extern const C_Int_t Posix_ProcEnv_SC_MAPPED_FILES;
extern const C_Int_t Posix_ProcEnv_SC_MEMLOCK;
extern const C_Int_t Posix_ProcEnv_SC_MEMLOCK_RANGE;
extern const C_Int_t Posix_ProcEnv_SC_MEMORY_PROTECTION;
extern const C_Int_t Posix_ProcEnv_SC_MESSAGE_PASSING;
extern const C_Int_t Posix_ProcEnv_SC_MONOTONIC_CLOCK;
extern const C_Int_t Posix_ProcEnv_SC_MQ_OPEN_MAX;
extern const C_Int_t Posix_ProcEnv_SC_MQ_PRIO_MAX;
extern const C_Int_t Posix_ProcEnv_SC_NGROUPS_MAX;
extern const C_Int_t Posix_ProcEnv_SC_OPEN_MAX;
extern const C_Int_t Posix_ProcEnv_SC_PAGE_SIZE;
extern const C_Int_t Posix_ProcEnv_SC_PAGESIZE;
extern const C_Int_t Posix_ProcEnv_SC_PRIORITIZED_IO;
extern const C_Int_t Posix_ProcEnv_SC_PRIORITY_SCHEDULING;
extern const C_Int_t Posix_ProcEnv_SC_RAW_SOCKETS;
extern const C_Int_t Posix_ProcEnv_SC_RE_DUP_MAX;
extern const C_Int_t Posix_ProcEnv_SC_READER_WRITER_LOCKS;
extern const C_Int_t Posix_ProcEnv_SC_REALTIME_SIGNALS;
extern const C_Int_t Posix_ProcEnv_SC_REGEXP;
extern const C_Int_t Posix_ProcEnv_SC_RTSIG_MAX;
extern const C_Int_t Posix_ProcEnv_SC_SAVED_IDS;
extern const C_Int_t Posix_ProcEnv_SC_SEM_NSEMS_MAX;
extern const C_Int_t Posix_ProcEnv_SC_SEM_VALUE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_SEMAPHORES;
extern const C_Int_t Posix_ProcEnv_SC_SHARED_MEMORY_OBJECTS;
extern const C_Int_t Posix_ProcEnv_SC_SHELL;
extern const C_Int_t Posix_ProcEnv_SC_SIGQUEUE_MAX;
extern const C_Int_t Posix_ProcEnv_SC_SPAWN;
extern const C_Int_t Posix_ProcEnv_SC_SPIN_LOCKS;
extern const C_Int_t Posix_ProcEnv_SC_SPORADIC_SERVER;
extern const C_Int_t Posix_ProcEnv_SC_SS_REPL_MAX;
extern const C_Int_t Posix_ProcEnv_SC_STREAM_MAX;
extern const C_Int_t Posix_ProcEnv_SC_SYMLOOP_MAX;
extern const C_Int_t Posix_ProcEnv_SC_SYNCHRONIZED_IO;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_ATTR_STACKADDR;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_ATTR_STACKSIZE;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_CPUTIME;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_DESTRUCTOR_ITERATIONS;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_KEYS_MAX;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_PRIO_INHERIT;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_PRIO_PROTECT;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_PRIORITY_SCHEDULING;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_PROCESS_SHARED;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_SAFE_FUNCTIONS;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_SPORADIC_SERVER;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_STACK_MIN;
extern const C_Int_t Posix_ProcEnv_SC_THREAD_THREADS_MAX;
extern const C_Int_t Posix_ProcEnv_SC_THREADS;
extern const C_Int_t Posix_ProcEnv_SC_TIMEOUTS;
extern const C_Int_t Posix_ProcEnv_SC_TIMER_MAX;
extern const C_Int_t Posix_ProcEnv_SC_TIMERS;
extern const C_Int_t Posix_ProcEnv_SC_TRACE;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_EVENT_FILTER;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_EVENT_NAME_MAX;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_INHERIT;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_LOG;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_NAME_MAX;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_SYS_MAX;
extern const C_Int_t Posix_ProcEnv_SC_TRACE_USER_EVENT_MAX;
extern const C_Int_t Posix_ProcEnv_SC_TTY_NAME_MAX;
extern const C_Int_t Posix_ProcEnv_SC_TYPED_MEMORY_OBJECTS;
extern const C_Int_t Posix_ProcEnv_SC_TZNAME_MAX;
extern const C_Int_t Posix_ProcEnv_SC_V6_ILP32_OFF32;
extern const C_Int_t Posix_ProcEnv_SC_V6_ILP32_OFFBIG;
extern const C_Int_t Posix_ProcEnv_SC_V6_LP64_OFF64;
extern const C_Int_t Posix_ProcEnv_SC_V6_LPBIG_OFFBIG;
extern const C_Int_t Posix_ProcEnv_SC_VERSION;
extern const C_Int_t Posix_ProcEnv_SC_XBS5_ILP32_OFF32;
extern const C_Int_t Posix_ProcEnv_SC_XBS5_ILP32_OFFBIG;
extern const C_Int_t Posix_ProcEnv_SC_XBS5_LP64_OFF64;
extern const C_Int_t Posix_ProcEnv_SC_XBS5_LPBIG_OFFBIG;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_CRYPT;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_ENH_I18N;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_LEGACY;